--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,10 @@
 jupyterlite-core
 jupyterlite-pyodide-kernel
 jupyterlab
+voici-core
 requests
 altair
 pandas
 tqdm
+voila-material @ git+https://github.com/GLAM-Workbench/voila-material.git
+jinja2
