--- a/requirements.txt
+++ b/requirements.txt
@@ -85,6 +85,7 @@ jedi==0.19.2
     # via ipython
 jinja2==3.1.6
     # via
+    #   -r requirements.in
     #   altair
     #   jupyter-server
     #   jupyterlab
@@ -107,6 +108,7 @@ jupyter-client==8.6.3
     #   ipykernel
     #   jupyter-server
     #   nbclient
+    #   voila
 jupyter-core==5.7.2
     # via
     #   ipykernel
@@ -117,6 +119,7 @@ jupyter-core==5.7.2
     #   nbclient
     #   nbconvert
     #   nbformat
+    #   voila
 jupyter-events==0.12.0
     # via jupyter-server
 jupyter-lsp==2.2.5
@@ -127,6 +130,7 @@ jupyter-server==2.15.0
     #   jupyterlab
     #   jupyterlab-server
     #   notebook-shim
+    #   voila
 jupyter-server-terminals==0.5.3
     # via jupyter-server
 jupyterlab==4.3.6
@@ -134,11 +138,14 @@ jupyterlab==4.3.6
 jupyterlab-pygments==0.3.0
     # via nbconvert
 jupyterlab-server==2.27.3
-    # via jupyterlab
+    # via
+    #   jupyterlab
+    #   voila
 jupyterlite-core==0.5.1
     # via
     #   -r requirements.in
     #   jupyterlite-pyodide-kernel
+    #   voici-core
 jupyterlite-pyodide-kernel==0.5.2
     # via -r requirements.in
 markupsafe==3.0.2
@@ -154,9 +161,13 @@ mistune==3.1.3
 narwhals==1.31.0
     # via altair
 nbclient==0.10.2
-    # via nbconvert
+    # via
+    #   nbconvert
+    #   voila
 nbconvert==7.16.6
-    # via jupyter-server
+    # via
+    #   jupyter-server
+    #   voila
 nbformat==5.10.4
     # via
     #   jupyter-server
@@ -289,6 +300,7 @@ traitlets==5.14.3
     #   nbclient
     #   nbconvert
     #   nbformat
+    #   voila
 types-python-dateutil==2.9.0.20241206
     # via arrow
 typing-extensions==4.12.2
@@ -306,6 +318,14 @@ uri-template==1.3.0
     # via jsonschema
 urllib3==2.3.0
     # via requests
+voici-core==0.8.0
+    # via -r requirements.in
+voila==0.5.8
+    # via
+    #   voici-core
+    #   voila-material
+voila-material @ git+https://github.com/GLAM-Workbench/voila-material.git
+    # via -r requirements.in
 wcwidth==0.2.13
     # via prompt-toolkit
 webcolors==24.11.1
@@ -316,6 +336,8 @@ webencodings==0.5.1
     #   tinycss2
 websocket-client==1.8.0
     # via jupyter-server
+websockets==15.0.1
+    # via voila
 zipp==3.21.0
     # via importlib-metadata
 
